# hacktor

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  Usage.md  example.py  main.py  pyproject.toml  test_pokepot_uat.sh  tox.ini
.github/workflows/: ci-docker-push.yml
chakra/: evaluator.py  generator.py  main.py  parser.py  scanner.py
chakra/webapp/: burp.py  crawler.py  gradio.py  har.py  model.py  scanner.py
chakra/workflow/: scan.py
conocer/: evaluator.py  generator.py  main.py  parser.py  scanner.py
conocer/webapp/: crawler.py  har.py  scanner.py
hacktor/: main.py  parser.py
hacktor/dtx/: parser.py  scanner.py
hacktor/models/: _ollama.py  base.py  eliza.py  exceptions.py  groq.py  hf.py  openai.py  utils.py  wrapper.py
hacktor/utils/: printer.py
hacktor/webapp/: ai.py  burp.py  crawler.py  fuzzer.py  gradio.py  har.py  model.py  playwright.py  scanner.py
hacktor/webapp/ai/: parser.py  predict.py
hacktor/workflow/: scan.py  scanner.py
hector/: generator.py  main.py
hector/webapp/: crawler.py  har.py  scanner.py
samples/: indic_gemma_default_jailbreak_1.json  indic_gemma_default_jailbreak_1.md  indic_gemma_report_1.json  indic_gemma_report_1.md  krutrim_default_10_1.json  krutrim_default_10_1.md  krutrim_default_1_1.md  krutrim_default_1_2.json  pokebot_default_jailbreak_1.json  pokebot_default_jailbreak_1.md  pokebot_default_trained_1.json  pokebot_default_trained_2.json  pokebot_default_trained_2.md
tests/: test_detoxio_eval_response_parser.py  test_detoxio_eval_result.py  test_detoxio_filter_builder.py  test_gradio_utils.py  test_model_crawler.py  test_model_fuzzer.py
tests/data/sample/: input_prompts1.json  input_prompts1.text
tests/samples/: burp_request1.txt  report_with_owasp.json  sample_console_output.txt
