[tool.poetry]
name = "hacktor"
version = "0.1.0"
description = "LLM models Red Teaming Utility Package"
authors = ["jchauhan <jitendra@detoxio.ai>"]
readme = "README.md"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.from-file]
source = "VERSION"


[tool.poetry.dependencies]
python = "^3.11"
progress = "*"
retry = "*"
httpx = "*"
bufbuild-protovalidate-protocolbuffers-python = "*"
bufbuild_protovalidate_grpc_python = "*"
googleapis_googleapis_protocolbuffers_python = "*"
googleapis_googleapis_grpc_python = "*"
detoxio-api-protocolbuffers-python = "*"
detoxio_api_grpc_python = "*"
grpcio = "*"
grpcio-tools = "*"
transformers = "^4.38.2"
markdown = "^3.5.2"
markdown-builder = "^0.1.2"
playwright = "^1.42.0"
validators = "^0.23.2"
haralyzer = "^2.4.0"
#torch = "^2.2.1"
gradio-client = "^0.13.0"
addict = "^2.4.0"
colorama = "^0.4.6"
transitions = "^0.9.2"
langchain-openai = "^0.1.21"
networkx = "^3.3"
dtx-assessment-api = "^0.7.0"


[[tool.poetry.source]]
name = "buf"
url = "https://buf.build/gen/python"
priority = "supplemental"

[tool.poetry.dev-dependencies]
pytest = "^8.0.2"
tox = "*"

[tox]
requires = { tox = ">=4" }
env_list = [
    "py{310}",
    "lint",
    "type",
    "coverage"
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry.scripts]
hacktor = "hacktor.main:main"
